--- a/css/main-style.css
+++ b/css/main-style.css
@@ -182,6 +182,15 @@ h1 {
     transform: scale(1.5);
 }
 
+.img-card p {
+    z-index: 4;
+    transition: transform 0.3s;
+    font-size: 2vw;
+}
+.img-card p:hover {
+    transform: scale(1.2);
+}
+
 .img-card img {
     width: 100%;
 }
