--- a/css/main-style.css
+++ b/css/main-style.css
@@ -29,8 +29,10 @@ background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 
     padding-top: 10px;
     padding-bottom: 10px;
     border: double 10px rgb(95, 16, 101);
-    background: rgb(224,196,81);
-    background: radial-gradient(circle, rgba(224,196,81,1) 51%, rgba(193,160,28,1) 70%, rgba(107,104,95,1) 100%);
+    background-image: url('https://media.discordapp.net/attachments/1184982072310366300/1185310350954995732/80307900-fond-de-texture-doree.jpg?ex=658f2549&is=657cb049&hm=0aa58f0ca8ba572a8a5ecc0b2167c21b4e1a64429b851f788eef6b08604665e3&=&format=webp&width=1674&height=1116');
+    background-size: 110% 110%;
+    background-position: center;
+    background-repeat: no-repeat;
     border-radius: 100%;
     font-size: 30px;
     text-align: center;
@@ -57,12 +59,13 @@ background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 
 
 .box {
     border: double 10px rgb(95 16 101);
+    border-radius: 20px;
     margin-top: 20px;
     width: 95%;
     display: flex;
     background: rgb(255,214,251);
-background: radial-gradient(circle, rgba(255,214,251,1) 34%, rgba(255,152,245,1) 73%, rgba(214,90,145,1) 95%, rgba(203,73,118,1) 100%);
-       box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
+    background: radial-gradient(circle, rgba(255,214,251,1) 34%, rgba(255,152,245,1) 73%, rgba(214,90,145,1) 95%, rgba(203,73,118,1) 100%);
+    box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
     -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
     -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
 }
@@ -101,7 +104,7 @@ background: radial-gradient(circle, rgba(255,214,251,1) 34%, rgba(255,152,245,1)
     font-size: large;
     background-color: red;
     border: solid 5px rgb(95, 16, 101);
-    border-radius: 2%;
+    border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -110,7 +113,7 @@ background: radial-gradient(circle, rgba(255,214,251,1) 34%, rgba(255,152,245,1)
     padding-top: 20px ;
     padding-bottom: 20px;
     border: solid 5px rgb(95, 16, 101);
-    border-radius: 2%;
+    border-radius: 10px;
     background-color: rgb(255 0 0);
     display: flex;
     flex-direction: column;
@@ -140,7 +143,9 @@ background: radial-gradient(circle, rgba(255,214,251,1) 34%, rgba(255,152,245,1)
 .poeme {
     margin: 20px;
     padding: 20px;
-    background-color: white;
+    background-image: url('https://media.discordapp.net/attachments/1184982072310366300/1185315688705949786/premium_photo-1675695700239-44153e6bf430.png?ex=658f2a42&is=657cb542&hm=26e3c715ac6baf258b525a3c206485cbb7a619fa34ab8d3896e603a3c990f976&=&format=webp&quality=lossless&width=744&height=1116');
+    background-repeat:no-repeat;
+    background-size: 100%;    
     box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
     -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
     -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
@@ -164,16 +169,17 @@ h1 {
 }
 
 .img-card {
+    z-index: O;
     margin: 20px;
     width: 20%;
     border: solid 2px rgb(95, 16, 101);
     background: rgb(248,151,255);
     background: radial-gradient(circle, rgba(248,151,255,1) 51%, rgba(255,0,191,1) 96%);
-    border-radius: 3%;
+    border-radius: 5px;
     color: rgb(95, 16, 101);
     text-align: center;
     font-family: 'Charmonman';
-    transition: transform 0.3s;
+    transition:transform 0.3s;
     overflow: hidden;
     box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
     -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
@@ -181,7 +187,7 @@ h1 {
 }
 
 .img-card:hover {
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 .img-card p {
@@ -206,6 +212,11 @@ h1 {
         display: flex;
         flex-direction: column;
     }
+
+    .img-card:hover {
+        transform: scale(2);
+    }
+    
 }
 
 @font-face {
