--- a/css/main-style.css
+++ b/css/main-style.css
@@ -145,7 +145,7 @@ background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 
     padding: 20px;
     background-image: url('https://media.discordapp.net/attachments/1184982072310366300/1185315688705949786/premium_photo-1675695700239-44153e6bf430.png?ex=658f2a42&is=657cb542&hm=26e3c715ac6baf258b525a3c206485cbb7a619fa34ab8d3896e603a3c990f976&=&format=webp&quality=lossless&width=744&height=1116');
     background-repeat:no-repeat;
-    background-size: 100%;    
+    background-size: 100% 100%;    
     box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
     -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
     -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
