--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,20 +1,11 @@
-@property --rotate {
-    syntax: "<angle>";
-    initial-value: 132deg;
-    inherits: false;
-  }
-  
-  :root {
-    --card-height: 65vh;
-    --card-width: calc(var(--card-height) / 1.5);
-  }
 
 body {
     background: rgb(255,255,255);
-background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 22%, rgba(248,157,255,1) 52%, rgba(79,0,59,1) 96%);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 22%, rgba(248,157,255,1) 52%, rgba(79,0,59,1) 96%);
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: url('../images/arrow.cur'),auto;
 }
 
 /* HEADER */
@@ -51,10 +42,12 @@ background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 
 }
 #myAudio {
     padding: 20px;
+
 }
 #myAudio::-webkit-media-controls-panel {
     background-color: red;
 }
+
 /* CENTER */
 
 .box {
@@ -124,7 +117,9 @@ background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 
 .coeur-image {
     width: 80%;
 }
-
+.coeur-image:hover {
+    cursor:url('../images/Precision.cur'), pointer;
+}
 #img1 {
     z-index: 3;
     transition: opacity 5s ease; /* Transition d'opacité sur 0.5 secondes avec un effet "ease" */
