--- a/css/main-style.css
+++ b/css/main-style.css
@@ -198,6 +198,68 @@ h1 {
     width: 100%;
 }
 
+/* QUIZ */
+.quiz {
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+
+}
+.choices {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+}
+#question{
+    font-family: 'Charmonman';
+    text-align: center;
+    padding-left:20px;
+    padding-right: 20px;
+}
+
+#progress {
+    font-family: 'Charmonman';
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+#score {
+    font-family: 'Charmonman';
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.btn {
+    background-color: #fcbbcb;
+    font-family: 'charmonman';
+    text-align: center;
+    color:black;
+    font-size: 20px;
+    margin: 10px;
+    width: 100%;
+    transition: 0.3s;
+    border-radius: 20px;
+    box-shadow: 5px 5px 15px 0 rgba(195, 78, 114, 0.8), -5px -5px 15px 0 rgba(252, 187, 203, 0.8);
+}
+
+.btn:active{
+    box-shadow: inset 5px 5px 15px 0 rgba(195, 78, 114, 0.8), inset -5px -5px 15px 0 rgba(252, 187, 203, 0.8)!important;
+}
+.btn:hover{
+    box-shadow: 5px 5px 15px 0 rgba(198, 21, 61, 0.8), -5px -5px 15px 0 rgba(252 187, 203, 0.8);
+}
+
+.btn:active p {
+    transform: scale(0.95);
+}
+
 @media (max-width: 768px) {
     .img-card {
         margin: 10px;
