--- a/css/main-style.css
+++ b/css/main-style.css
@@ -199,13 +199,18 @@ h1 {
 }
 
 /* QUIZ */
+
 .quiz {
-    padding: 10%;
+    padding-bottom: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
 
+}
+
+#boxquiz {
+    margin-top: 0%;
 }
 .choices {
     display: flex;
