--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,11 +1,16 @@
-
 body {
-    background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,172,255,1) 22%, rgba(248,157,255,1) 52%, rgba(79,0,59,1) 96%);
+    background: rgb(255, 255, 255);
+    background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(249, 172, 255, 1) 22%,
+        rgba(248, 157, 255, 1) 52%,
+        rgba(79, 0, 59, 1) 96%
+    );
     display: flex;
     flex-direction: column;
     align-items: center;
-    cursor: url('../images/arrow.cur'),auto;
+    cursor: url("../images/arrow.cur"), auto;
 }
 
 /* HEADER */
@@ -25,19 +30,19 @@ a {
     padding-top: 10px;
     padding-bottom: 10px;
     border: double 10px rgb(95, 16, 101);
-    background-image: url('https://media.discordapp.net/attachments/1184982072310366300/1185310350954995732/80307900-fond-de-texture-doree.jpg?ex=658f2549&is=657cb049&hm=0aa58f0ca8ba572a8a5ecc0b2167c21b4e1a64429b851f788eef6b08604665e3&=&format=webp&width=1674&height=1116');
+    background-image: url("../images/fond-de-texture-doree.jpeg");
     background-size: 110% 110%;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 100%;
     font-size: 30px;
     text-align: center;
-    font-family: 'PinyonScript';
+    font-family: "PinyonScript";
     color: rgb(95, 16, 101);
     transition: color 0.3s ease; /* Transition pour l'effet de survol */
-    box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
+    box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -webkit-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
 }
 
 .player-container {
@@ -47,7 +52,6 @@ a {
 }
 #myAudio {
     padding: 20px;
-
 }
 #myAudio::-webkit-media-controls-panel {
     background-color: red;
@@ -61,11 +65,17 @@ a {
     margin-top: 20px;
     width: 95%;
     display: flex;
-    background: rgb(255,214,251);
-    background: radial-gradient(circle, rgba(255,214,251,1) 34%, rgba(255,152,245,1) 73%, rgba(214,90,145,1) 95%, rgba(203,73,118,1) 100%);
-    box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
+    background: rgb(255, 214, 251);
+    background: radial-gradient(
+        circle,
+        rgba(255, 214, 251, 1) 34%,
+        rgba(255, 152, 245, 1) 73%,
+        rgba(214, 90, 145, 1) 95%,
+        rgba(203, 73, 118, 1) 100%
+    );
+    box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -webkit-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
 }
 
 .row-container {
@@ -98,7 +108,7 @@ a {
 }
 .introduction-container {
     text-align: center;
-    font-family: 'Charmonman';
+    font-family: "Charmonman";
     font-size: large;
     background-color: red;
     border: solid 5px rgb(95, 16, 101);
@@ -108,7 +118,7 @@ a {
 }
 
 .images-container {
-    padding-top: 20px ;
+    padding-top: 20px;
     padding-bottom: 20px;
     border: solid 5px rgb(95, 16, 101);
     border-radius: 10px;
@@ -123,18 +133,17 @@ a {
     width: 80%;
 }
 .coeur-image:hover {
-    cursor:url('../images/Precision.cur'), pointer;
+    cursor: url("../images/Precision.cur"), pointer;
 }
 #img1 {
     z-index: 3;
     transition: opacity 5s ease; /* Transition d'opacité sur 0.5 secondes avec un effet "ease" */
-
 }
 
 .transparent {
     opacity: 0; /* Opacité souhaitée (0.5 pour une transparence de 50%) */
-  }
-  
+}
+
 #img2 {
     z-index: 2;
     margin-top: -80%;
@@ -143,29 +152,28 @@ a {
 .poeme {
     margin: 20px;
     padding: 20px;
-    background-image: url('https://media.discordapp.net/attachments/1184982072310366300/1185315688705949786/premium_photo-1675695700239-44153e6bf430.png?ex=658f2a42&is=657cb542&hm=26e3c715ac6baf258b525a3c206485cbb7a619fa34ab8d3896e603a3c990f976&=&format=webp&quality=lossless&width=744&height=1116');
-    background-repeat:no-repeat;
-    background-size: 100% 100%;    
-    box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
+    background-image: url("../images/poeme-background.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -webkit-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
 }
 
 .poeme2 {
-    padding:20px;
+    padding: 20px;
     text-align: center;
 }
 .poeme2 img {
     width: 100%;
-    box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
+    box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -webkit-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
 }
 
 h1 {
-    font-family: 'PinyonScript';
-    text-shadow: -4px 2px 6px rgba(0,0,0,0.55);
-
+    font-family: "PinyonScript";
+    text-shadow: -4px 2px 6px rgba(0, 0, 0, 0.55);
 }
 
 .img-card {
@@ -173,17 +181,21 @@ h1 {
     margin: 20px;
     width: 20%;
     border: solid 2px rgb(95, 16, 101);
-    background: rgb(248,151,255);
-    background: radial-gradient(circle, rgba(248,151,255,1) 51%, rgba(255,0,191,1) 96%);
+    background: rgb(248, 151, 255);
+    background: radial-gradient(
+        circle,
+        rgba(248, 151, 255, 1) 51%,
+        rgba(255, 0, 191, 1) 96%
+    );
     border-radius: 5px;
     color: rgb(95, 16, 101);
     text-align: center;
-    font-family: 'Charmonman';
-    transition:transform 0.3s;
+    font-family: "Charmonman";
+    transition: transform 0.3s;
     overflow: hidden;
-    box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -webkit-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
-    -moz-box-shadow: 0px 12px 22px 4px rgba(0,0,0,0.63);
+    box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -webkit-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
+    -moz-box-shadow: 0px 12px 22px 4px rgba(0, 0, 0, 0.63);
 }
 
 .img-card:hover {
@@ -211,7 +223,6 @@ h1 {
     flex-direction: column;
     align-items: center;
     width: 80%;
-
 }
 
 #boxquiz {
@@ -224,23 +235,22 @@ h1 {
     justify-content: center;
     width: 70%;
 }
-#question{
-    font-family: 'Charmonman';
+#question {
+    font-family: "Charmonman";
     text-align: center;
-    padding-left:20px;
+    padding-left: 20px;
     padding-right: 20px;
 }
 
 #progress {
-    font-family: 'Charmonman';
+    font-family: "Charmonman";
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
-
 }
 
 #score {
-    font-family: 'Charmonman';
+    font-family: "Charmonman";
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -248,22 +258,25 @@ h1 {
 
 .btn {
     background-color: #fcbbcb;
-    font-family: 'charmonman';
+    font-family: "charmonman";
     text-align: center;
-    color:black;
+    color: black;
     font-size: 20px;
     margin: 10px;
     width: 100%;
     transition: 0.3s;
     border-radius: 20px;
-    box-shadow: 5px 5px 15px 0 rgba(195, 78, 114, 0.8), -5px -5px 15px 0 rgba(252, 187, 203, 0.8);
+    box-shadow: 5px 5px 15px 0 rgba(195, 78, 114, 0.8),
+        -5px -5px 15px 0 rgba(252, 187, 203, 0.8);
 }
 
-.btn:active{
-    box-shadow: inset 5px 5px 15px 0 rgba(195, 78, 114, 0.8), inset -5px -5px 15px 0 rgba(252, 187, 203, 0.8)!important;
+.btn:active {
+    box-shadow: inset 5px 5px 15px 0 rgba(195, 78, 114, 0.8),
+        inset -5px -5px 15px 0 rgba(252, 187, 203, 0.8) !important;
 }
-.btn:hover{
-    box-shadow: 5px 5px 15px 0 rgba(198, 21, 61, 0.8), -5px -5px 15px 0 rgba(252 187, 203, 0.8);
+.btn:hover {
+    box-shadow: 5px 5px 15px 0 rgba(198, 21, 61, 0.8),
+        -5px -5px 15px 0 rgba(252 187, 203, 0.8);
 }
 
 .btn:active p {
@@ -283,15 +296,14 @@ h1 {
     .img-card:hover {
         transform: scale(2);
     }
-    
 }
 
 @font-face {
-    font-family: 'PinyonScript';
-    src: url('../fonts/pinyon-script/PinyonScript-Regular.ttf');
+    font-family: "PinyonScript";
+    src: url("../fonts/pinyon-script/PinyonScript-Regular.ttf");
 }
 
 @font-face {
-    font-family: 'Charmonman';
-    src: url('../fonts/Charmonman/Charmonman-Regular.ttf');
+    font-family: "Charmonman";
+    src: url("../fonts/Charmonman/Charmonman-Regular.ttf");
 }
